pls i need to fix this ty

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,8 @@ body {
   font-size: 15px;
 }
 .navbar li {
-    display: inline-block;
+    float: right;
+    list-style: none;
     padding-right: 25px;
     padding-left: 25px;
 }
