--- a/css/style.css
+++ b/css/style.css
@@ -72,10 +72,24 @@ body {
 }
 
 .project {
-    text-align: center;
+    padding-left: 0;
+    padding-right: 0;
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    display:block;
 }
 
 .projects {
     padding: 10px;
     color: #cceeff;
+}
+
+canvas {
+    padding-left: 0;
+    padding-right: 0;
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
 }
